# osu-chishiki-bot

./: .gitignore  Cargo.toml  README.md  gosubot_config.json
src/: bancho.rs  bot_config.rs  gosu.rs  main.rs  twitch.rs
src/rosu/: listener.rs  mod.rs  structs.rs
src/twitch/: auth.rs  mod.rs
