[package]
name = "osu-chishiki-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
async-tungstenite = { version = "0.24.0", features = ["tokio", "tokio-runtime"] }
chrono = "0.4.31"
env_logger = "0.10.1"
gosumemory_helper = "0.1.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.1", features = ["server", "http1", "tokio"] }
keyring = "2.1.0"
log = "0.4.20"
oauth2 = "4.4.2"
open = "5.0.1"
secrecy = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = "0.1.14"
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
url = "2.5.0"
