[package]
name = "osu-chishiki-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.24.0", features = ["tokio", "tokio-runtime"] }
env_logger = "0.10.1"
gosumemory_helper = "0.1.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = "0.1.14"
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
url = "2.5.0"
